--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 <link href="/favicon.ico" type="image/x-icon" rel="icon">
 <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
 <link type="text/css" rel="stylesheet" href="/media/css/style.css">
+<!-- <link type="text/css" rel="stylesheet" href="/media/css/bootstrap.css"> -->
 <link type="text/css" rel="stylesheet" href="/media/css/upDateStyle.css">
 <script type="text/javascript">
 window.top["BNPage"]=0;
@@ -38,7 +39,7 @@ background-image:url(/template/images/bg.jpg);background-repeat:repeat-x;
   <div class="fwtop_cont">
     <div class="fwtop_logo">
       <div class="top_logo" id="top_logo">
-  <img src="/logo.gif" width="138" height="42" alt="网站Logo" title="test">
+  <img src="favicon.jpg" width="138" height="82" alt="荣安" title="test">
 </div>
 
     </div>
@@ -71,8 +72,8 @@ background-image:url(/template/images/bg.jpg);background-repeat:repeat-x;
   <ul>
     <li><a href="/">网站首页</a></li>
     <li><a href="/about/">关于我们</a></li>
-    <li><a href='/list/'>新闻中心</a></li>
-    <!-- <li><a href="#">产品展示</a></li> -->
+    <!-- <li><a href='/list/'>新闻中心</a></li> -->
+    <li><a href="/product/">产品展示</a></li>
     <li><a href="/baike/">物流百科</a></li>
     <li><a href="/feed/">联系我们</a></li>
   </ul>
@@ -103,11 +104,11 @@ jQuery("#siteBanner").slide( { mainCell:"#bd ul", effect:"leftLoop",autoPlay:"tr
     <div class="fwbottom_bottomInfo">
         <div class="siteBottomNav">
 <ul>
-<li><a href="#">网站首页</a></li>
+<li><a href="/">网站首页</a></li>
 <li><a href="/about/">关于我们</a></li>
-<li><a href="#">新闻中心</a></li>
-<li><a href="#">产品展示</a></li>
-<li><a href="#">在线留言</a></li>
+<li><a href="/baike/">物流百科</a></li>
+<li><a href="/product">产品展示</a></li>
+<li><a href="/feed/">联系我们</a></li>
 
 
 
