--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -61,13 +61,12 @@ layout: default
 	</div>
 	<div class="label_content">
 		<div class="about_con clearfix">
-			<ul id="udContent413"><li>地址：广东省东莞市XXXX开发区XXX路<br>
-电话：0000-00000000<br>
-手机：189000000000<br>
+			<ul id="udContent413"><li>地址：广东省东莞市南城区周溪大道9号<br>
+电话：0769-26382052<br>
+手机：18925526212<br>
 联系人：王经理<br>
-邮政编号：000000<br>
 网站：dgrawl.com<br>
-邮箱：dgrawl@163.com<br></li></ul>
+邮箱：ra_ron@163.com<br></li></ul>
 		</div>
 	</div>
 	<div class="label_foot"></div>
