--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@ background-image:url(/template/images/bg.jpg);background-repeat:repeat-x;
   <div class="fwtop_cont">
     <div class="fwtop_logo">
       <div class="top_logo" id="top_logo">
-  <img src="favicon.jpg" width="138" height="82" alt="荣安" title="test">
+  <img src="/favicon.jpg" width="138" height="82" alt="荣安" title="test">
 </div>
 
     </div>
