--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -90,7 +90,7 @@ background-image:url(/template/images/bg.jpg);background-repeat:repeat-x;
 </div>  
 <!-- <div class="fwmain fwtop_cont" style="font-family: 宋体; font-size: 16px; line-height: 24px; white-space: normal;"> -->
 <div class="fwmain">
-<div class="panel panel-default">
+<div class="panel panel-primary">
   <div class="panel-heading">关于我们</div>
   <div class="panel-body">
     <p>
