--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -10,7 +10,8 @@
 <link href="/favicon.ico" type="image/x-icon" rel="icon">
 <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
 <link type="text/css" rel="stylesheet" href="/media/css/style.css">
-<link type="text/css" rel="stylesheet" href="/media/css/bootstrap.css">
+<link type="text/css" rel="stylesheet" href="/media/css/bootstrap.min.css">
+<link type="text/css" rel="stylesheet" href="/media/css/bootstrap-theme.min.css">
 <link type="text/css" rel="stylesheet" href="/media/css/upDateStyle.css">
 <script type="text/javascript">
 window.top["BNPage"]=0;
