--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,8 @@
 <link href="/favicon.ico" type="image/x-icon" rel="icon">
 <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
 <link type="text/css" rel="stylesheet" href="/media/css/style.css">
-<link type="text/css" rel="stylesheet" href="/media/css/bootstrap.css">
+<link type="text/css" rel="stylesheet" href="/media/css/bootstrap.min.css">
+<link type="text/css" rel="stylesheet" href="/media/css/bootstrap-theme.min.css">
 <link type="text/css" rel="stylesheet" href="/media/css/upDateStyle.css">
 <script type="text/javascript">
 window.top["BNPage"]=0;
@@ -99,7 +100,12 @@ jQuery("#siteBanner").slide( { mainCell:"#bd ul", effect:"leftLoop",autoPlay:"tr
 </div>  
 
 <div class="fwmain" style="padding-left:5px;padding-right:5px;">
-  <h3>快线时间表</h3>
+  
+<div class="panel panel-primary">
+  <div class="panel-heading">快线时间表</div>
+  <div class="panel-body">
+
+
 <table class="table table-hover table-striped table-bordered">
   <tr>
     <th>始发站</th>
@@ -223,6 +229,9 @@ jQuery("#siteBanner").slide( { mainCell:"#bd ul", effect:"leftLoop",autoPlay:"tr
   
 
 </table>
+
+</div>
+</div>
 </div>
 
 <div class="fwbottom">
