--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,37 +38,16 @@ background-image:url(/template/images/bg.jpg);background-repeat:repeat-x;
 <div id="BNreturnTopDiv"></div>
 <div class="fwtop">
   <div class="fwtop_cont">
-    <div class="fwtop_logo">
+    <!-- <div class="fwtop_logo">
       <div class="top_logo" id="top_logo">
-  <img src="/favicon.jpg" width="138" height="82" alt="荣安" title="test">
+  <img src="/favicon.jpg" width="138" height="82" alt="荣安" title="test" style='float:left;'>
 </div>
 
-    </div>
-    <div class="fwtop_info">
-      <div class="topSearch clear" id="topSearch">
-  <div class="search">
-  <!-- <input type="text" id="siteSearchContent" value="请输入关键字..." class="enter"> -->
-  <!-- <div class="select" onmouseover="displaySiteSearch($(this))" onmouseout="hideSiteSearch(event,$(this))" id="search">
-    <span class="select_info" id="siteSelect_info"><a href="javascript:void(0)" rel="新闻">新闻</a></span>
-    <span class="select_search" id="select_siteSearch">
-      <ul>
-        <li><a href="javascript:void(0)" rel="新闻">新闻</a></li>
-        <li><a href="javascript:void(0)" rel="产品">产品</a></li>
-        <li><a href="javascript:void(0)" rel="下载">下载</a></li>
-        <li><a href="javascript:void(0)" rel="招聘">招聘</a></li>
-      </ul>
-    </span>
-  </div>
-  <input id="siteSearchSubmit" type="button" class="btn"> -->
-</div>
-
-
-
-</div>
-
-    </div>
+    </div> -->
+    
     <div class="clear"></div>
     <div class="fwtop_mainNav">
+      <img src="/favicon.jpg" width="138" height="50" alt="荣安" title="test" style='float:left;'>
       <div class="siteMainNav fwtop_nav fwnavlink" id="siteMainNav">
   <ul>
     <li><a href="/">网站首页</a></li>
@@ -99,7 +78,7 @@ jQuery("#siteBanner").slide( { mainCell:"#bd ul", effect:"leftLoop",autoPlay:"tr
   </div> -->
 </div>  
 
-<div class="fwmain" style="padding-left:5px;padding-right:5px;">
+<div class="fwmain" style="margin-top:25px;">
   
 <div class="panel panel-primary">
   <div class="panel-heading">快线时间表</div>
